--- a/index.html
+++ b/index.html
@@ -33,5 +33,5 @@
     </ul>    
 </body>
 
-    <p> source: <a href="http://www.bioshockgame.com/site/us/"> Bioshock </a></p>
+    source: <a href="http://www.bioshockgame.com/site/us/"> Bioshock </a>
 </html>
