--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         <li>Freeze him solid and shatter him with smack of your wrench</li>
         <li>Lead him and his comrade to the water and zap them all with 1000 Volts</li>
         <li>Take research photos of him to learn his weaknesses</li>
-    </ul>    
+    </ul>  
+    
+    <p> source:<a href="http://www.bioshockgame.com/site/us/"> Bioshock </a> </p>
 </body>
-source:<a href="http://www.bioshockgame.com/site/us/"> Bioshock </a>
+
 </html>
